// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberListContainer /> render() should render Candu selector without numbers 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Phone numbers
    </h1>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-:r2:"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                Add Phone Number
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div>
      Create a phone number in Gorgias to connect Voice and SMS capabilities.
    </div>
    <div
      class="row"
    >
      <div
        data-candu-id="phone-numbers-empty-placeholder"
      />
    </div>
  </div>
</div>
`;

exports[`<PhoneNumberListContainer /> render() should render with a number 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Phone numbers
    </h1>
    <div>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
        data-name="button"
        data-rac=""
        data-react-aria-pressable="true"
        id="react-aria-:r0:"
        tabindex="0"
        type="button"
      >
        <div
          class="ui-button-surface-a432"
        >
          <span
            class="ui-button-content-a432"
          >
            <span
              class="typography-bold-md ui-text-text-d239"
              data-name="text"
              style="text-align: left; text-wrap: nowrap;"
            >
              <strong>
                Add Phone Number
              </strong>
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div>
      Create a phone number in Gorgias to connect Voice and SMS capabilities.
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
  </div>
</div>
`;
